@@ -6,6 +6,8 @@ Changes in JMurmel-1.2 relative to JMurmel-1.1
  * (declaim (optimize...
  * some functions are opencoded in compiled code
  * add limited support for macroexpand-1 in compiled code (quoted forms only)
+ * fixed compiler primitive "list" to return a mutable list
+ * fixed compiled "let*"
 
 
 Changes in JMurmel-1.1 relative to JMurmel-1.0
